--- a/admin/src/translations/fr.json
+++ b/admin/src/translations/fr.json
@@ -1,9 +1,13 @@
 {
   "plugin.name": "Slugify from richtext",
-  "field": {
-    "slug-from-richtext" : {
-      "label": "slug-from-richtext::label", 
-      "description": "slug-from-richtext::description"
+  "slugify-from-richtext": {
+    "field": {
+      "slug-from-richtext" : {
+        "label": "slug-from-richtext::label", 
+        "description": "slug-from-richtext::description"
+      }
     }
   }
 }
+  
+  
